applications/milvus/base-embed/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milvus-standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milvus-standalone
  template:
    metadata:
      labels:
        app: milvus-standalone
    spec:
      containers:
        - name: milvus
          image: docker.io/milvusdb/milvus:v2.6.0
          command: ["milvus"]
          args: ["run", "standalone"]
          ports:
            - containerPort: 19530
            - containerPort: 9091
            - containerPort: 2379
          volumeMounts:
            - name: milvus-data
              mountPath: /var/lib/milvus
            - name: etcd-config
              mountPath: /milvus/configs/embedEtcd.yaml
              subPath: embedEtcd.yaml
            - name: user-config
              mountPath: /milvus/configs/user.yaml
              subPath: user.yaml
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9091
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 20
            failureThreshold: 3
      volumes:
        - name: milvus-data
          persistentVolumeClaim:
            claimName: milvus-data
        - name: etcd-config
          configMap:
            name: milvus-etcd-config
        - name: user-config
          configMap:
            name: milvus-user-config
